--- a/frontendassistant/src/Components/Creador_Equipos/modal_evento/modal_evento.css
+++ b/frontendassistant/src/Components/Creador_Equipos/modal_evento/modal_evento.css
@@ -1,4 +1,4 @@
-.conainer_Modal {
+.container_Modal {
     background-color: var(--Modal-BG-2);
     backdrop-filter: blur(1rem);
     position: fixed;
@@ -10,6 +10,8 @@
     align-items: center;
     justify-content: center;
     cursor: pointer;
+    left: 0;
+    top: 0;
 }
 
 .modal_center {
