--- a/frontendassistant/src/Components/Creador_Equipos/styles_CreadorEquipos.css
+++ b/frontendassistant/src/Components/Creador_Equipos/styles_CreadorEquipos.css
@@ -379,3 +379,22 @@
     font-size: 40px;
     color: var(--TxT-Color-01); 
 }
+
+.CancularDiferencia{
+    display: flex;
+    border-radius: 50px;
+    padding: 15px 25px;
+    background-color: var(--TxT-Color-06);
+    color: var(--TxT-Color-05);
+    outline: none;
+    border: none;
+    cursor: pointer;
+    transition: opacity 0.3s ease;
+}
+
+.CancularDiferencia:hover{
+    opacity: 75%;
+}
+.CancularDiferencia:active{
+    opacity: 100%;
+}
