--- a/frontendassistant/src/index.css
+++ b/frontendassistant/src/index.css
@@ -7,7 +7,8 @@ body {
   font-style: normal;
   margin: 0;
   padding: 0;
-  background-color: var(--BG-Color-Gradient-2);
+  background: rgb(8, 8, 7);
+  background: linear-gradient(328deg, rgba(8, 8, 7, 1) 70%, rgba(29, 36, 15, 1) 100%);
   color: #fff;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
